# ros_motion_planning

./: .copilot_todo
src/core/controller/ppo_controller/: CMakeLists.txt  README_improved.md  SUCCESS_GUIDE.md  package.xml  ppo_controller_plugin.xml
src/core/controller/ppo_controller/config/: ppo_config.json  ppo_params.yaml  ppo_training_params.yaml
src/core/controller/ppo_controller/include/controller/: ppo_controller.h
src/core/controller/ppo_controller/launch/: evaluate_ppo.launch  ppo_training_improved.launch  train_ppo_simulation.launch
src/core/controller/ppo_controller/scripts/: create_dirs.sh  evaluate_ppo.py  launch_tensorboard.sh  ppo_agent.py  ppo_config.json  ppo_training_env.py  simple_train.py  start_training.sh  train_ppo.py
src/core/controller/ppo_controller/src/: ppo_controller.cpp
src/sim_env/config/controller/: ppo_controller_params.yaml
src/sim_env/launch/include/navigation/: move_base.launch.xml
src/sim_env/urdf/turtlebot3_waffle/: turtlebot3_waffle.gazebo.xacro
src/turtlebot3/turtlebot3_description/urdf/: turtlebot3_box_1.urdf.xacro  turtlebot3_box_2.urdf.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger_tb2.gazebo.xacro  turtlebot3_burger_tb2.urdf.xacro
src/turtlebot3/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_stage_4.launch
src/user_config/: user_config_ppo.yaml
